--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "angular-animate": "~1.2.0",
     "angular-touch": "~1.2.0",
     "angular-route": "~1.2.0",
-    "markdown": "~0.5.0"
+    "marked": "chjj/marked#master"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
