--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "angular-touch": "~1.2.0",
     "angular-route": "~1.2.0",
     "marked": "chjj/marked#master",
-    "highlight.js": "~7.3.0"
+    "highlightjs": "~8.3.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
